--- a/src/main/resources/templates/sw.html
+++ b/src/main/resources/templates/sw.html
@@ -3,11 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
+    <meta property="og:title" content="동아리 NALSSAM 지원하기">
+    <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
+    <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
+    <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" type="text/css" href="css/sw.css" />
+    <title>NALSSAM</title>
     <style>
+      @font-face {
+        font-family: "SFCompact-Regular";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/SF-Compact.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Bold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Bold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Light";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-SemiBold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-SemiBold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Heavy";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Regular";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Regular.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-ExtraBold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-ExtraBold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-UltraLight";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Medium";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("truetype");
+      }
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -181,95 +239,101 @@
       <div class="sw screen">
         <div class="view-C61RwL">
           <div class="navbar-UOcbxe">
-            <div class="hr-dIx87p"></div>
-            <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div>
+            <div class="hr-dIx87p"></div> <!--01074108824로 학번 이름 남겨-->
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
+              target="_blank"
+            >
+              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
+            >
           </div>
-          <a href="mainpage.html"><div class="nalssam-UOcbxe applesdgothicneo-heavy-normal-white-14px">NALSSAM</div></a>
+          <a href="mainpage.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
-        <div class="bar-C61RwL">
-          <div class="footer-enIJlq">
-            <div class="group-ZXviDO">
-              <div class="vr-mmDlSt"></div>
-              <div class="vr-copy-mmDlSt"></div>
-              <div class="textlabel-mmDlSt hw-little-fonts naldev-style">동아리 실 위치</div>
-              <div class="x1-mmDlSt hw-little-fonts naldev-style">실험동 1층 유도실 옆</div>
-              <div class="x010-8402-2173-mmDlSt hw-little-fonts naldev-style">인사팀 문의 010 8402 2173</div>
-            </div>
-            <div class="vr-copy-ZXviDO"></div>
-            <div class="x010-29-ZXviDO hw-little-fonts naldev-style">날샘 문의사항 대표연락처(010 2997 9675)</div>
-            <div class="hr-ZXviDO"></div>
-            <div class="hr-Ij0EpA"></div>
-            <div class="nalssam-ZXviDO hw-little-fonts naldev-style">
-              NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
-            </div>
-            <div class="x-ZXviDO hw-little-fonts naldev-style">
-              날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘
-            </div>
-            <div class="nalssam-Ij0EpA hw-little-fonts naldev-style">공식 인스타 채널: @nalssam_sprout</div>
-          </div>
-        </div>
-        <div class="sw-C61RwL applesdgothicneo-normal-black-15px">SW 노예 지원</div>
-        <img class="x2-C61RwL" src="img/hw-ub77cuc778-2-uc544ub798-0E0D8294-F679-4068-8C17-2853C3651DA9.png" />
+        <div class="sw-C61RwL littleabout">SW 노예 지원</div>
+        <img class="x2-C61RwL" src="img/bm-ub77cuc778-2-uc544ub798-8DF41F25-AA87-4831-B23D-3E316715B340.png" />
         <div class="top-word-C61RwL">
-          <div class="nalssam-sw-RyCdLg">NALSSAM에는 항상 SW노예 필요합니다</div>
-          <div class="x-RyCdLg applesdgothicneo-extra-normal-black-48px">
-            혁신이 바탕이 되는 업무.<br />마법과도 같은 경험.
-          </div>
-          <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div>
+          <div class="nalssam-sw-RyCdLg sdsemi24">NALSSAM에는 항상 SW노예 필요합니다</div>
+          <div class="x-RyCdLg thebig">혁신이 바탕이 되는 업무.<br />마법과도 같은 경험.</div>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
+            target="_blank"
+          >
+            <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div></a
+          >
         </div>
         <div class="img0054-C61RwL"></div>
-        <div class="textlabel-C61RwL applesdgothicneo-normal-black-16px">
+        <div class="textlabel-C61RwL sizes">
           ㅏㄹㅁㄴㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ<br />ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ<br />ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
         </div>
         <div class="view-VMr6Om">
           <div class="img0058-3-5l5ivn"></div>
-          <div class="na-5l5ivn">당신이 꿈꾸는 모든것이 현실로.<br />NALSSAM과 함께.</div>
+          <div class="na-5l5ivn sd48medium">당신이 꿈꾸는 모든것이 현실로.<br />NALSSAM과 함께.</div>
         </div>
         <div class="group-2-C61RwL">
-          <div class="textlabel-zUixHA">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-sdxwGy" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-kTiyrb" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-GE0XEQ" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <div class="textlabel-sdxwGy applesdgothicneo-normal-black-36px">대신고 인공지능 선두 동아리</div>
-          <div class="textlabel-kTiyrb applesdgothicneo-normal-black-24px">
-            대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지<br />능이스게
-            하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 <br />내용 대충 우덜들
-            인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용<br />대충 우덜들 인공지능이 스게 하다는
-            내용
+          <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
+          <img class="line-5-zUixHA" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-sdxwGy" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-kTiyrb" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-GE0XEQ" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <div class="textlabel-sdxwGy sd36">대신고 인공지능 선두 동아리</div>
+          <div class="image-classification-zUixHA sdmedium24">
+            Image Classification을 이용한 병충해 분류 인공지능 및 다양한 프로젝트를 개발하며 인공지능 선두로
+            <br />동아리로 발전함. 데이터 크리에이터 캠프 등 다양한 인공지능 프로그램에 참여하여 실전 개발 경험을
+            <br />쌓아갈 수 있다. 식물 병충해 분류, 쓰레기 인식 및 처리, 마스크 Detection, 인공지능 비서 등을 개발하고
+            <br />Image Classification, Object Detection, 자연어처리, TTS , LSTM 신경망 등의 분야를 배우고 다루어
+            <br />인공지능의 실전 개발 프로젝트에 참여한다.
           </div>
-          <div class="textlabel-GE0XEQ applesdgothicneo-normal-black-36px">당신의 꿈을 만드는 피지컬 컴퓨팅</div>
-          <div class="textlabel-ZTOnhR applesdgothicneo-normal-black-24px">
-            대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지<br />능이스게
-            하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 <br />내용 대충 우덜들
-            인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용<br />대충 우덜들 인공지능이 스게 하다는
-            내용
+          <div class="textlabel-kTiyrb sd36">당신의 꿈을 만드는 피지컬 컴퓨팅</div>
+          <div class="hw-zUixHA sdmedium24">
+            HW팀과 함께 아두이노, 라즈베리 파이 등의 피지컬 컴퓨팅을 활용하여 문제해결을 위한 개발을 진행한다.
+            <br />Hardware 팀의 개발 제품을 운영하며 SW 기술을 개발하고 구현한다. 넘치는 예산과 피지컬 컴퓨팅 부품을<br />활용하여
+            제한 받지 않고 꿈과 아이디어를 펼칠 수 있다.
           </div>
-          <div class="ap-ps-zUixHA applesdgothicneo-normal-black-36px">APPs</div>
-          <div class="textlabel-FuxmSR applesdgothicneo-normal-black-24px">
-            대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지<br />능이스게
-            하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 <br />내용 대충 우덜들
-            인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용<br />대충 우덜들 인공지능이 스게 하다는
-            내용
+          <div class="ap-ps-zUixHA sd36">APPs</div>
+          <div class="android-studio-zUixHA sdmedium24">
+            Android Studio를 사용한 앱 개발을 통한 산출물을 제작한다. 앱을 통한 서비스와 인공지능 운영 등 <br />다양한
+            분야의 앱을 다루며 앱 개발에 대한 지식과 경험을 쌓을 수 있다. 병충해 이미지 분석 앱 <br />캡칭플랜츠 등
+            다양한 앱을 개발했으며 날샘의 디자이너 등과 함께 일할 수 있다.
           </div>
-          <div class="h1-webs-h1-zUixHA applesdgothicneo-normal-black-36px">&lt;h1&gt; Webs &lt;/h1&gt;</div>
-          <div class="textlabel-l9TSxs applesdgothicneo-normal-black-24px">
-            대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지<br />능이스게
-            하다는 내용대충 우덜들 인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 <br />내용 대충 우덜들
-            인공지능이 스게 하다는 내용대충 우덜들 인공지능이 스게 하다는 내용<br />대충 우덜들 인공지능이 스게 하다는
-            내용
+          <div class="h1-webs-h1-zUixHA sd36">&lt;h1&gt; Webs &lt;/h1&gt;</div>
+          <div class="x-zUixHA sdmedium24">
+            지금 네가 보는 웹사이트, 날샘 손수 처음부터 만든거야. 어때?<br /><br />창업 아이템 판매 사이트 운영 및 관리,
+            웹사이트 디자인과 프론트 엔드 디자인, 백엔드 디자인, <br />서버 호스팅을 다루며 웹 개발에 대한 실전 경험을
+            쌓을 수 있다.
           </div>
         </div>
-        <div class="group-15-C61RwL">
-          <div class="a-stair-bplant-box-wz60dm">
-            <span class="span1-YHxm9o"
-              >a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
-              기반 체온 측정 키트<br /></span
-            ><span class="span2-YHxm9o">.<br />.<br />.<br />그리고 당신의 아이디어</span>
+        <div class="stacked-group-C61RwL">
+          <div class="bar-SHDHHB">
+            <div class="footer-fNGuiB">
+              <div class="group-i7hrr4">
+                <div class="vr-D44yGU"></div>
+                <div class="vr-copy-D44yGU"></div>
+                <div class="textlabel-D44yGU hw-little-fonts">동아리 실 위치</div>
+                <div class="x1-D44yGU hw-little-fonts">실험동 1층 유도실 옆</div>
+                <div class="x010-8402-2173-D44yGU hw-little-fonts">인사팀 문의 010 8402 2173</div>
+              </div>
+              <div class="vr-copy-i7hrr4"></div>
+              <div class="x010-29-i7hrr4 hw-little-fonts">날샘 문의사항 대표연락처(010 2997 9675)</div>
+              <div class="hr-i7hrr4"></div>
+              <div class="hr-PZ5l3E"></div>
+              <div class="nalssam-i7hrr4 hw-little-fonts">
+                NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
+              </div>
+              <div class="x-i7hrr4 hw-little-fonts">날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘</div>
+              <div class="nalssam-PZ5l3E hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
+            </div>
           </div>
-          <div class="nalssam-2021-wz60dm">
-            <span class="span1-w9XJTM">NALSSAM의 프로젝트</span
-            ><span class="span2-w9XJTM"><br />2021년도를<br />위한<br />프로젝트 계획</span>
+          <div class="group-15-SHDHHB">
+            <div class="nalssam-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              NALSSAM의 프로젝트<br />
+            </div>
+            <div class="a-stair-bplant-box-kxhp4v sdidontknow">
+              a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
+              기반 체온 측정 키트<br />.<br />.<br />.<br />그리고 당신의 아이디어
+            </div>
+            <div class="x2021-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              2021년도를<br />위한<br />프로젝트 계획
+            </div>
           </div>
         </div>
       </div>
