--- a/src/main/resources/templates/bm.html
+++ b/src/main/resources/templates/bm.html
@@ -3,11 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
+    <meta property="og:title" content="동아리 NALSSAM 지원하기">
+    <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
+    <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
+    <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" type="text/css" href="css/bm.css" />
+    <title>NALSSAM</title>
     <style>
+      @font-face {
+        font-family: "SFCompact-Regular";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/SF-Compact.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Bold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Bold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Light";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-SemiBold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-SemiBold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Heavy";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Regular";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Regular.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-ExtraBold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-ExtraBold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-UltraLight";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Medium";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("truetype");
+      }
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -182,89 +240,116 @@
         <div class="view-C61RwL">
           <div class="navbar-UOcbxe">
             <div class="hr-dIx87p"></div>
-            <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div>
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
+              target="_blank"
+            >
+              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
+            >
           </div>
-          <a href="mainpage.html"><div class="nalssam-UOcbxe applesdgothicneo-heavy-normal-white-14px">NALSSAM</div></a>
+          <a href="mainpage.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
-        <div class="bar-C61RwL">
-          <div class="footer-enIJlq">
-            <div class="group-ZXviDO">
-              <div class="vr-mmDlSt"></div>
-              <div class="vr-copy-mmDlSt"></div>
-              <div class="textlabel-mmDlSt hw-little-fonts naldev-style">동아리 실 위치</div>
-              <div class="x1-mmDlSt hw-little-fonts naldev-style">실험동 1층 유도실 옆</div>
-              <div class="x010-8402-2173-mmDlSt hw-little-fonts naldev-style">인사팀 문의 010 8402 2173</div>
-            </div>
-            <div class="vr-copy-ZXviDO"></div>
-            <div class="x010-29-ZXviDO hw-little-fonts naldev-style">날샘 문의사항 대표연락처(010 2997 9675)</div>
-            <div class="hr-ZXviDO"></div>
-            <div class="hr-Ij0EpA"></div>
-            <div class="nalssam-ZXviDO hw-little-fonts naldev-style">
-              NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
-            </div>
-            <div class="x-ZXviDO hw-little-fonts naldev-style">
-              날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘
-            </div>
-            <div class="nalssam-Ij0EpA hw-little-fonts naldev-style">공식 인스타 채널: @nalssam_sprout</div>
-          </div>
-        </div>
-        <div class="bm-C61RwL applesdgothicneo-normal-black-15px">BM 노예 지원</div>
-        <img class="x2-C61RwL" src="img/hw-ub77cuc778-2-uc544ub798-0E0D8294-F679-4068-8C17-2853C3651DA9.png" />
+        <div class="bm-C61RwL littleabout">BM 노예 지원</div>
+        <img class="x2-C61RwL" src="img/bm-ub77cuc778-2-uc544ub798-8DF41F25-AA87-4831-B23D-3E316715B340.png" />
         <div class="top-word-C61RwL">
-          <div class="textlabel-RyCdLg">당신의 창업 커리어를 위한 동아리</div>
-          <div class="textlabel-t6JFtc applesdgothicneo-extra-normal-black-48px">
-            아 여기에 또 어떤 개소리를 할까<br />마지막에 점으로 끝내주면 대충 멋있음.
-          </div>
-          <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div>
+          <div class="textlabel-RyCdLg sdsemi24">당신의 창업 커리어를 위한 동아리</div>
+          <div class="nalssam-bm-RyCdLg thebig">NALSSAM이 존재하는 이유<br />BM팀을 소개합니다.</div>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
+            target="_blank"
+          >
+            <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div></a
+          >
         </div>
         <div class="x1-C61RwL"></div>
-        <div class="textlabel-C61RwL applesdgothicneo-normal-black-16px">
-          ㅏㄹㅁㄴㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ<br />ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ<br />ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
+        <div class="bm-VMr6Om sizes">
+          BM팀은 동아리의 내부와 외부의 업무를 다중적으로 맡는 동아리에 가장 영향력있는 동아리 입니다. <br />보통 동아리
+          활동 예산서, 동아리 경영, 창업PR, 날포지엄과 같은 동아리의 아이디어와 업무를 서포트하고 진행시키는 것이 이
+          팀의 주요 업무입니다.<br />
+          BM팀은 거의 모든 동아리의 외부대회에 참가하며 대회계획을 짜고 지원금과 상금을 관리합니다. 물론, 실적도
+          대단하죠.<br />
+          계획서 또는 예산서를 주로 쓰기 때문에 화려한 글을 쓰는 능력자들이 대다수이고 다른 팀에 비해 업무가 많은 편에
+          속하기 때문에 동아리의 능력자들이 많은 팀이기도 합니다. <br />많은 동아리 원이 가고 싶어하는 팀이며 가장
+          회의에 많이 참여하는 팀입니다. 동아리 활동에 참여가 많은 만큼 열정이 많은 학생에게 딱 어울리는 팀입니다.
         </div>
         <div class="img0074-C61RwL"></div>
         <div class="group-2-C61RwL">
-          <div class="textlabel-zUixHA">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-sdxwGy" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-kTiyrb" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-GE0XEQ" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <div class="textlabel-sdxwGy applesdgothicneo-normal-black-36px">피지컬 컴퓨팅</div>
-          <div class="hw-zUixHA applesdgothicneo-normal-black-24px">
-            날샘 HW 팀에서는 아두이노와 라즈베리 파이를 이용한 수많은 프로젝트를 진행하며 다양한 센서와 <br />출력을
-            이용한 작품과 시스템 제작한다. 300만원 상당의 아두이노 부품을 보유하여 이를 바탕으로 <br />창의적인
-            아이디어를 현실화할 수 있다.
+          <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
+          <img class="line-5-zUixHA" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-sdxwGy" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-kTiyrb" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <div class="textlabel-sdxwGy sd36">외부 대회</div>
+          <div class="group-3-zUixHA">
+            <div class="bm-iMKsSw sdmedium24">
+              BM팀 활동의 꽃은 역시 외부대회입니다. 수많은 외부 대회 및 활동을 진행하며, 수상 실적역시 대단합니다.
+              <br />그 중에서 유명한 수상실적이 있다면 2020 300 부총리겸 교육부 장관 인증서 수여, 2020 어·아·창 비대면
+              <br />모의 창업경진대회, 2020 대한민국 청소년 온라인 창업경진대회와 같은 대회에서 수상했습니다. <br />또한
+              동아리의 살이 되는 대회 지원금을 꾸준히 공급하기 위해 기획서부터 팀원 배정을 도맡습니다.
+              <br />내부적으로는 2020 비즈쿨페스티벌 참가 및 체험 부스 운영을 전담했으며 데모데이 등의 비즈쿨 활동을
+              <br />진행했습니다. 자신의 열정이 넘쳐 해소하고 싶거나 워커홀릭의 기질을 갖고계신 학생 여러분,
+              축하합니다!<br />날샘으로 향하는 길이 열렸습니다.
+            </div>
+            <div class="textlabel-iMKsSw sd36">외부 대회</div>
           </div>
-          <div class="textlabel-kTiyrb applesdgothicneo-normal-black-36px">피지컬 컴퓨팅과 인공지능</div>
-          <div class="hw-sdxwGy applesdgothicneo-normal-black-24px">
-            단순한 인공지능이 아닌 HW에서의 인공지능 프로젝트. 현실의 문제를 해결하기 위한 인공지능 기술을 <br />배우고
-            개발시키며 SW/HW의 융합적 역량을 키우며 개발한 프로젝트.<br /><br />ex) 라즈베리 파이와 카메라 센서를 이용한
-            Computer Vision 인공지능.
+          <div class="group-4-zUixHA">
+            <div class="bm-Ylg7MA sdmedium24">
+              BM팀은 동아리의 창업 활동의 주체입니다. 창업대회와 창업활동 혹은 1년 프로젝트와 같은 주요 활동을
+              <br />기획하고 2020년에는 인공지능을 활용한 기술창업 아이템 &#39;캡칭 플랜츠&#39;로 모의 크라운드 펀딩,
+              온라인 <br />쇼핑몰 개설을 진행했습니다. 창업에 관심이 있는 여러 팀원들이 대다수이며 올해 법인 설립 또는
+              개인 <br />사업자 등록을 위해 갖은 노력을 다하는 중입니다. 창업 아이디어 구상, 아이템 구체화와 이후
+              창업기획서 <br />작성은 모두 BM팀의 역할입니다. 창업에 진심인 워커홀릭 아이디어 뱅크들을 환영합니다!
+            </div>
+            <div class="textlabel-Ylg7MA sd36">창업 활동</div>
           </div>
-          <div class="x3-d-zUixHA applesdgothicneo-normal-black-36px">3D 모델링</div>
-          <div class="fusion-360-3-d-zUixHA applesdgothicneo-normal-black-24px">
-            Fusion 360을 이용한 3D 모델링. 여러분의 아이디어와 날샘의 프로젝트를 3D 모델링하고 4대의 날샘<br />Ender-3D
-            프린터로 현실화하다. 늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야<br />함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함<br /><br />늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함
-          </div>
-          <div class="x2020-hard-ware-slav-zUixHA applesdgothicneo-normal-black-36px">
-            2020년도 HardWare Slave가 진행한 ProJ
-          </div>
-          <div class="x-zUixHA applesdgothicneo-normal-black-24px">
-            - 아두이노 로봇팔<br />
-            - 무드 등 키트<br />
-            - 스마트 화분<br />
-            - 수경 재배기
+          <div class="group-4-sdxwGy">
+            <div class="x2018-steam-re-xtVPWN sdmedium24">
+              2018 STEAM R&amp;E 일반분야 전국 50팀 선정 <br />2018 환경창업대전 환경창업동아리 전국 10팀 선정
+              <br />2019 고교ㆍ대학 연계 R&amp;E 금상 <br />2019 UNIST 슈퍼컴퓨팅캠프 KT상 수상<br />2019 부산ㆍ울산
+              안전 메이커톤 최우수상 <br />2019 청소년 발명가 프로그램(YIP) 선발 <br />장려상 2019 스마틴앱챌린지 전국
+              60팀 선정<br />가작상 2019 학생 창업유망팀 300 전국 300팀 선정<br />장관 수료증 2019 대한민국 청소년
+              창업경진대회 부총리겸 교육부 장관상 수상 <br />2020 꿈나무 과학 멘토 사업 - 화학 강의 &#34;화약 기술이
+              국가 운명을 좌우한다.&#34;<br />POSCO ICT 2020 AI Challenge 우수상&nbsp;&nbsp;수상 - (주)포스코 /
+              캡칭플랜츠 앱 제작 <br />2020 300 부총리겸 교육부 장관 인증서 / 캡칭 플랜츠 <br />2020 데이터 크리에이터
+              캠프 우수상 수상 - 한국 정보화진흥원 / 부동산 가치 예측 모델 <br />인공지능 실험 2020 어·아·창”비대면 모의
+              창업경진대회 창의혁신상 수상 <br />온라인 쇼핑몰 운영 2020 대한민국 청소년 온라인
+              창업경진대회&nbsp;&nbsp;우수상 수상<br />동아리 비즈쿨 활동 2020 국립중앙과학관 가을 사이언스데이 장려상 /
+              자석유체 및 자석 슬라임
+            </div>
+            <div class="bm-xtVPWN sd36">BM팀 수상실적</div>
           </div>
         </div>
-        <div class="group-15-C61RwL">
-          <div class="a-stair-bplant-box-wz60dm">
-            <span class="span1-YHxm9o"
-              >a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
-              기반 체온 측정 키트<br /></span
-            ><span class="span2-YHxm9o">.<br />.<br />.<br />그리고 당신의 아이디어</span>
+        <div class="stacked-group-C61RwL">
+          <div class="group-15-SHDHHB">
+            <div class="a-stair-bplant-box-kxhp4v sdidontknow">
+              a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
+              기반 체온 측정 키트<br />.<br />.<br />.<br />그리고 당신의 아이디어
+            </div>
+            <div class="x2021-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              2021년도를<br />위한<br />프로젝트 계획
+            </div>
+            <div class="nalssam-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              NALSSAM의 프로젝트<br />
+            </div>
           </div>
-          <div class="nalssam-2021-wz60dm">
-            <span class="span1-w9XJTM">NALSSAM의 프로젝트</span
-            ><span class="span2-w9XJTM"><br />2021년도를<br />위한<br />프로젝트 계획</span>
+          <div class="bar-SHDHHB">
+            <div class="footer-fNGuiB">
+              <div class="group-i7hrr4">
+                <div class="vr-D44yGU"></div>
+                <div class="vr-copy-D44yGU"></div>
+                <div class="textlabel-D44yGU hw-little-fonts">동아리 실 위치</div>
+                <div class="x1-D44yGU hw-little-fonts">실험동 1층 유도실 옆</div>
+                <div class="x010-8402-2173-D44yGU hw-little-fonts">인사팀 문의 010 8402 2173</div>
+              </div>
+              <div class="vr-copy-i7hrr4"></div>
+              <div class="x010-29-i7hrr4 hw-little-fonts">날샘 문의사항 대표연락처(010 2997 9675)</div>
+              <div class="hr-i7hrr4"></div>
+              <div class="hr-PZ5l3E"></div>
+              <div class="nalssam-i7hrr4 hw-little-fonts">
+                NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
+              </div>
+              <div class="x-i7hrr4 hw-little-fonts">날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘</div>
+              <div class="nalssam-PZ5l3E hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
+            </div>
           </div>
         </div>
       </div>
