--- a/src/main/resources/templates/css/hw.css
+++ b/src/main/resources/templates/css/hw.css
@@ -1,92 +1,75 @@
 /* screen - hw */
 
-.applesdgothicneo-extra-normal-black-25px {
-  color: var(--black);
-  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 25px;
-}
-.applesdgothicneo-extra-normal-black-48px {
-  color: var(--black);
-  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 48px;
-}
-.applesdgothicneo-heavy-normal-white-14px {
-  color: var(--white);
-  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
-  font-size: 14px;
-}
-.applesdgothicneo-normal-black-15px {
-  color: var(--black);
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 15px;
-}
-.applesdgothicneo-normal-black-16px {
-  color: var(--black);
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 16px;
-}
-.applesdgothicneo-normal-black-24px {
-  color: var(--black);
-  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
-  font-size: 24px;
-}
-.applesdgothicneo-normal-black-36px {
-  color: var(--black);
+.-style {
   font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 36px;
+  font-size: 199px;
+  letter-spacing: 0.00px;
 }
-.applesdgothicneo-normal-caribbean-green-13px {
-  color: var(--caribbean-green);
+.aboutnalssam {
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
-  font-size: 13px;
+  font-size: 27px;
+  letter-spacing: -1.73px;
 }
-.applesdgothicneo-normal-white-12px {
-  color: var(--white);
-  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
-  font-size: 12px;
+.aboutthenalssam {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 14px;
+  letter-spacing: 0.00px;
 }
-.applesdgothicneo-ultra-normal-black-20px {
-  color: var(--black);
-  font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
-  font-size: 20px;
+.and {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 36px;
+  letter-spacing: 0.00px;
 }
-.border-class-1 {
-  border: 1px solid rgba(150,150,150,1.0);
+.asd {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 28px;
+  letter-spacing: 0.00px;
+}
+.asdfad {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 18px;
+  letter-spacing: 0.00px;
+}
+.facetimestyle {
+  font-family: "SFCompact-Regular", Helvetica, Arial, serif;
+  font-size: 195px;
+  letter-spacing: 0.00px;
+}
+.google-ads--style {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 58px;
+  letter-spacing: -3.00px;
 }
 .hw {
   background-color: var(--white);
-  height: 4585px;
+  height: 4547px;
   overflow-x: hidden;
   position: relative;
   width: 1440px;
 }
-.hw .a-stair-bplant-box-wz60dm {
+.hw .a-stair-bplant-box-kxhp4v {
   background-color: transparent;
-  color: var(--lilac);
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 36px;
+  color: var(--white);
   font-weight: 700;
   height: auto;
   left: 525px;
-  letter-spacing: 0.00px;
   line-height: 43px;
   position: absolute;
   text-align: left;
   top: 211px;
   width: auto;
 }
-.hw .bar-C61RwL {
+.hw .bar-SHDHHB {
   background-color: transparent;
   height: 137px;
-  left: 0px;
-  position: absolute;
-  top: 4448px;
+  margin: 70px 0 0 0;
+  position: relative;
   width: 1440px;
 }
 .hw .button-RyCdLg {
   background-color: var(--caribbean-green);
   height: 24px;
-  left: 228px;
+  left: 223px;
   position: absolute;
   top: 171px;
   width: 75px;
@@ -102,12 +85,9 @@
 .hw .deep-hard-RyCdLg {
   background-color: transparent;
   color: var(--black);
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 24px;
   font-weight: 600;
   height: auto;
-  left: 144px;
-  letter-spacing: -1.48px;
+  left: 139px;
   line-height: 29px;
   position: absolute;
   text-align: center;
@@ -115,7 +95,7 @@
   white-space: nowrap;
   width: auto;
 }
-.hw .footer-enIJlq {
+.hw .footer-fNGuiB {
   background-color: var(--eerie-black);
   height: 137px;
   left: 0px;
@@ -125,35 +105,34 @@
 }
 .hw .fusion-360-3-d-zUixHA {
   background-color: transparent;
+  color: var(--black);
   font-weight: 500;
   height: auto;
   left: 12px;
-  letter-spacing: -0.98px;
   line-height: 29px;
   position: absolute;
   text-align: left;
   top: 859px;
   width: auto;
 }
-.hw .group-15-C61RwL {
+.hw .group-15-SHDHHB {
   background: linear-gradient(225deg, #32C5FF 0%, #B620E0 51%, #F7B500 100%);
   background-color: transparent;
   border-radius: 39px;
   height: 681px;
-  left: 185px;
-  position: absolute;
-  top: 3677px;
+  margin: 0;
+  position: relative;
   width: 1071px;
 }
 .hw .group-2-C61RwL {
   background-color: transparent;
-  height: 1308px;
+  height: 1221px;
   left: 247px;
   position: absolute;
   top: 2186px;
   width: 945px;
 }
-.hw .group-ZXviDO {
+.hw .group-i7hrr4 {
   background-color: transparent;
   height: 18px;
   left: 861px;
@@ -161,20 +140,12 @@
   top: 92px;
   width: 338px;
 }
-.hw .hr-Ij0EpA {
+.hw .hr-PZ5l3E {
   background-color: var(--tundora-2);
   height: 1px;
   left: 247px;
   position: absolute;
   top: 39px;
-  width: 947px;
-}
-.hw .hr-ZXviDO {
-  background-color: var(--tundora-2);
-  height: 1px;
-  left: 247px;
-  position: absolute;
-  top: 83px;
   width: 947px;
 }
 .hw .hr-dIx87p {
@@ -185,12 +156,20 @@
   top: 52px;
   width: 1440px;
 }
+.hw .hr-i7hrr4 {
+  background-color: var(--tundora-2);
+  height: 1px;
+  left: 247px;
+  position: absolute;
+  top: 83px;
+  width: 947px;
+}
 .hw .hw-C61RwL {
   background-color: transparent;
+  color: var(--black);
   font-weight: 600;
   height: auto;
   left: 257px;
-  letter-spacing: -0.92px;
   line-height: 19px;
   position: absolute;
   text-align: left;
@@ -200,10 +179,10 @@
 }
 .hw .hw-sdxwGy {
   background-color: transparent;
+  color: var(--black);
   font-weight: 500;
   height: auto;
   left: 13px;
-  letter-spacing: -0.98px;
   line-height: 29px;
   position: absolute;
   text-align: left;
@@ -212,25 +191,15 @@
 }
 .hw .hw-zUixHA {
   background-color: transparent;
+  color: var(--black);
   font-weight: 500;
   height: auto;
   left: 13px;
-  letter-spacing: -0.98px;
   line-height: 29px;
   position: absolute;
   text-align: left;
   top: 280px;
   width: auto;
-}
-.hw .kakao-talk20210218231558710-C61RwL {
-  background-color: transparent;
-  background-image: url(../img/hw-kakaotalk20210218231558710-A2AFC579-CD33-4EBE-A0F6-DC05952FAEDE.png);
-  background-size: 100% 100%;
-  height: 595px;
-  left: 0px;
-  position: absolute;
-  top: 415px;
-  width: 1440px;
 }
 .hw .line-5-GE0XEQ {
   background-color: transparent;
@@ -243,9 +212,9 @@
 .hw .line-5-kTiyrb {
   background-color: transparent;
   height: 4px;
-  left: 1px;
+  left: 0px;
   position: absolute;
-  top: 1067px;
+  top: 980px;
   width: 944px;
 }
 .hw .line-5-sdxwGy {
@@ -264,22 +233,7 @@
   top: 155px;
   width: 944px;
 }
-.hw .nalssam-2021-wz60dm {
-  background-color: transparent;
-  color: var(--lilac);
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 48px;
-  font-weight: 700;
-  height: auto;
-  left: 90px;
-  letter-spacing: 0.00px;
-  line-height: 57px;
-  position: absolute;
-  text-align: left;
-  top: 86px;
-  width: auto;
-}
-.hw .nalssam-Ij0EpA {
+.hw .nalssam-PZ5l3E {
   background-color: transparent;
   color: var(--sonic-silver);
   font-weight: 400;
@@ -294,10 +248,10 @@
 }
 .hw .nalssam-UOcbxe {
   background-color: transparent;
+  color: var(--white);
   font-weight: 800;
   height: auto;
   left: 249px;
-  letter-spacing: 0.00px;
   line-height: 17px;
   position: absolute;
   text-align: center;
@@ -305,7 +259,7 @@
   white-space: nowrap;
   width: auto;
 }
-.hw .nalssam-ZXviDO {
+.hw .nalssam-i7hrr4 {
   background-color: transparent;
   color: var(--sonic-silver);
   font-weight: 400;
@@ -318,6 +272,18 @@
   white-space: nowrap;
   width: auto;
 }
+.hw .nalssam-kxhp4v {
+  background-color: transparent;
+  color: rgba(188,142,245,1.0);
+  font-weight: 700;
+  height: auto;
+  left: 90px;
+  line-height: 57px;
+  position: absolute;
+  text-align: left;
+  top: 86px;
+  width: auto;
+}
 .hw .navbar-UOcbxe {
   background-color: var(--cod-gray);
   height: 53px;
@@ -326,17 +292,17 @@
   top: 0px;
   width: 1440px;
 }
-.hw .span1-YHxm9o {
-
-}
-.hw .span1-w9XJTM {
-
-}
-.hw .span2-YHxm9o {
-
-}
-.hw .span2-w9XJTM {
-  color: rgba(255,255,255,1.0);
+.hw .stacked-group-C61RwL {
+  align-items: center;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  justify-content: flex-start;
+  left: 0px;
+  position: absolute;
+  top: 3659px;
+  width: 1440px;
 }
 .hw .textlabel-3pqNxu {
   background-color: transparent;
@@ -366,42 +332,17 @@
 }
 .hw .textlabel-C61RwL {
   background-color: transparent;
-  font-weight: 600;
-  height: auto;
-  left: 475px;
-  letter-spacing: -0.98px;
-  line-height: 19px;
-  position: absolute;
-  text-align: center;
-  top: 1128px;
-  width: auto;
-}
-.hw .textlabel-RyCdLg {
-  background-color: transparent;
+  color: var(--white);
   font-weight: 800;
   height: auto;
-  left: 0px;
-  letter-spacing: -2.95px;
+  left: 467px;
   line-height: 57px;
   position: absolute;
   text-align: center;
-  top: 43px;
+  top: 1596px;
   width: auto;
 }
-.hw .textlabel-kTiyrb {
-  background-color: transparent;
-  font-weight: 700;
-  height: auto;
-  left: 12px;
-  letter-spacing: -2.22px;
-  line-height: 43px;
-  position: absolute;
-  text-align: left;
-  top: 497px;
-  white-space: nowrap;
-  width: auto;
-}
-.hw .textlabel-mmDlSt {
+.hw .textlabel-D44yGU {
   background-color: transparent;
   color: var(--sonic-silver);
   font-weight: 400;
@@ -414,12 +355,37 @@
   white-space: nowrap;
   width: auto;
 }
-.hw .textlabel-sdxwGy {
+.hw .textlabel-RyCdLg {
   background-color: transparent;
+  color: var(--black);
+  font-weight: 800;
+  height: auto;
+  left: 0px;
+  line-height: 57px;
+  position: absolute;
+  text-align: center;
+  top: 43px;
+  width: auto;
+}
+.hw .textlabel-kTiyrb {
+  background-color: transparent;
+  color: var(--black);
   font-weight: 700;
   height: auto;
   left: 12px;
-  letter-spacing: -2.22px;
+  line-height: 43px;
+  position: absolute;
+  text-align: left;
+  top: 497px;
+  white-space: nowrap;
+  width: auto;
+}
+.hw .textlabel-sdxwGy {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 700;
+  height: auto;
+  left: 12px;
   line-height: 43px;
   position: absolute;
   text-align: left;
@@ -430,12 +396,9 @@
 .hw .textlabel-zUixHA {
   background-color: transparent;
   color: var(--black);
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 48px;
-  font-weight: 700;
+  font-weight: 800;
   height: auto;
-  left: 119px;
-  letter-spacing: -2.95px;
+  left: 125px;
   line-height: 57px;
   position: absolute;
   text-align: center;
@@ -446,10 +409,10 @@
 .hw .top-word-C61RwL {
   background-color: transparent;
   height: 195px;
-  left: 454px;
+  left: 459px;
   position: absolute;
   top: 185px;
-  width: 532px;
+  width: 522px;
 }
 .hw .view-C61RwL {
   background-color: transparent;
@@ -459,23 +422,7 @@
   top: 0px;
   width: 1440px;
 }
-.hw .vr-copy-ZXviDO {
-  background-color: var(--tundora);
-  height: 16px;
-  left: 1022px;
-  position: absolute;
-  top: 57px;
-  width: 1px;
-}
-.hw .vr-copy-mmDlSt {
-  background-color: var(--tundora);
-  height: 16px;
-  left: 195px;
-  position: absolute;
-  top: 1px;
-  width: 1px;
-}
-.hw .vr-mmDlSt {
+.hw .vr-D44yGU {
   background-color: var(--tundora);
   height: 16px;
   left: 78px;
@@ -483,7 +430,23 @@
   top: 1px;
   width: 1px;
 }
-.hw .x-ZXviDO {
+.hw .vr-copy-D44yGU {
+  background-color: var(--tundora);
+  height: 16px;
+  left: 195px;
+  position: absolute;
+  top: 1px;
+  width: 1px;
+}
+.hw .vr-copy-i7hrr4 {
+  background-color: var(--tundora);
+  height: 16px;
+  left: 1022px;
+  position: absolute;
+  top: 57px;
+  width: 1px;
+}
+.hw .x-i7hrr4 {
   background-color: transparent;
   color: var(--sonic-silver);
   font-weight: 400;
@@ -498,17 +461,27 @@
 }
 .hw .x-zUixHA {
   background-color: transparent;
+  color: var(--black);
   font-weight: 500;
   height: auto;
   left: 13px;
-  letter-spacing: -0.98px;
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 1192px;
+  top: 1105px;
   width: auto;
 }
-.hw .x010-29-ZXviDO {
+.hw .x00000-C61RwL {
+  background-color: transparent;
+  background-image: url(../img/hw-u1102u1161u11afu110cu1161u11bcu1107u117500000-8B7A2E16-BE63-4A28-B89B-1FA2AE39AD29.png);
+  background-size: 100% 100%;
+  height: 595px;
+  left: 0px;
+  position: absolute;
+  top: 415px;
+  width: 1440px;
+}
+.hw .x010-29-i7hrr4 {
   background-color: transparent;
   color: var(--sonic-silver);
   font-weight: 400;
@@ -521,7 +494,7 @@
   white-space: nowrap;
   width: auto;
 }
-.hw .x010-8402-2173-mmDlSt {
+.hw .x010-8402-2173-D44yGU {
   background-color: transparent;
   color: var(--sonic-silver);
   font-weight: 400;
@@ -534,7 +507,7 @@
   white-space: nowrap;
   width: auto;
 }
-.hw .x1-mmDlSt {
+.hw .x1-D44yGU {
   background-color: transparent;
   color: var(--sonic-silver);
   font-weight: 400;
@@ -557,7 +530,7 @@
 }
 .hw .x2-VMr6Om {
   background-color: transparent;
-  background-image: url(../img/hw-2-ACE9EDC7-B39F-4942-B59D-3D0DBB235D79.png);
+  background-image: url(../img/hw-2-84BEBBAA-7696-4C91-A688-DB239B16432A.png);
   background-size: 100% 100%;
   height: 736px;
   left: 0px;
@@ -567,27 +540,52 @@
 }
 .hw .x2020-hard-ware-slav-zUixHA {
   background-color: transparent;
+  color: var(--black);
   font-weight: 700;
   height: auto;
   left: 13px;
-  letter-spacing: -2.22px;
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 1134px;
+  top: 1047px;
   white-space: nowrap;
+  width: auto;
+}
+.hw .x2021-kxhp4v {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 700;
+  height: auto;
+  left: 90px;
+  line-height: 57px;
+  position: absolute;
+  text-align: left;
+  top: 137px;
   width: auto;
 }
 .hw .x3-d-zUixHA {
   background-color: transparent;
+  color: var(--black);
   font-weight: 700;
   height: auto;
   left: 13px;
-  letter-spacing: -2.22px;
   line-height: 43px;
   position: absolute;
   text-align: left;
   top: 801px;
+  white-space: nowrap;
+  width: auto;
+}
+.hw .x300-C61RwL {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 600;
+  height: auto;
+  left: 582px;
+  line-height: 19px;
+  position: absolute;
+  text-align: center;
+  top: 1128px;
   white-space: nowrap;
   width: auto;
 }
@@ -600,17 +598,151 @@
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
   font-size: 12px;
 }
-.naldev-style {
-  font-family: "AppleSDGothicNeo-Regular", Helvetica, Arial, serif;
+.littleabout {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 15px;
+  letter-spacing: -0.92px;
+}
+.littlefonts {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 16px;
+  letter-spacing: 0.00px;
+}
+.more {
+  font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
+  font-size: 20px;
+  letter-spacing: -1.00px;
+}
+.moreim {
+  font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
+  font-size: 20px;
+  letter-spacing: -1.00px;
+}
+.nalssamcr48 {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: 0.00px;
+}
+.nalssamlogo {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 14px;
+  letter-spacing: 0.00px;
+}
+.nalssamlogoblack {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 16px;
+  letter-spacing: 0.00px;
+}
+.sd12 {
+  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
   font-size: 12px;
-  letter-spacing: -0.12px;
+  letter-spacing: 0.00px;
+}
+.sd13green {
+  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
+  font-size: 13px;
+  letter-spacing: -0.80px;
+}
+.sd21green {
+  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
+  font-size: 21px;
+  letter-spacing: 0.00px;
+}
+.sd25 {
+  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
+  font-size: 25px;
+  letter-spacing: 0.00px;
+}
+.sd36 {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 36px;
+  letter-spacing: -2.22px;
+}
+.sd47blue {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: 0.00px;
+}
+.sd48bold {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: 0.00px;
+}
+.sd48colorfull {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: 0.00px;
+}
+.sd48medium {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: -1.80px;
+}
+.sd48newcolor {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: 0.00px;
+}
+.sd60 {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 60px;
+  letter-spacing: -3.48px;
+}
+.sdidontknow {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 36px;
+  letter-spacing: 0.00px;
+}
+.sdmedium24 {
+  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
+  font-size: 24px;
+  letter-spacing: -0.98px;
+}
+.sdsemi24 {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 24px;
+  letter-spacing: -1.48px;
+}
+.sdthenewenwcolor {
+  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: 0.00px;
+}
+.sdultralight {
+  font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
+  font-size: 16px;
+  letter-spacing: 0.00px;
+}
+.sizes {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 16px;
+  letter-spacing: -1.10px;
+}
+.thebig {
+  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: -3.60px;
+}
+.thebigwhite {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 48px;
+  letter-spacing: 0.00px;
+}
+.theintervuew {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 36px;
+  letter-spacing: 0.00px;
+}
+.thesilk {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 24px;
+  letter-spacing: 0.00px;
 }
 :root {
   --black: rgba(0,0,0,1.0);
   --caribbean-green: rgba(11,212,128,1.0);
   --cod-gray: rgba(10,10,10,1.0);
   --eerie-black: rgba(29,29,31,1.0);
-  --lilac: rgba(188,142,245,1.0);
   --mine-shaft: rgba(51,51,51,0.949);
   --sonic-silver: rgba(117,117,121,1.0);
   --tundora: rgba(66,66,69,1.0);
