--- a/src/main/resources/templates/hw.html
+++ b/src/main/resources/templates/hw.html
@@ -3,11 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
+    <meta property="og:title" content="동아리 NALSSAM 지원하기">
+    <meta property="og:description" content="2021년도 동아리 NALSSAM 노예 되기">
+    <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
+    <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="photo" />
     <link rel="stylesheet" type="text/css" href="css/hw.css" />
+    <title>NALSSAM</title>
     <style>
+      @font-face {
+        font-family: "SFCompact-Regular";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/SF-Compact.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Bold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Bold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Light";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-SemiBold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-SemiBold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Heavy";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Regular";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Regular.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-ExtraBold";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-ExtraBold.ttf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-UltraLight";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("truetype");
+      }
+      @font-face {
+        font-family: "AppleSDGothicNeo-Medium";
+        font-style: normal;
+        font-weight: 1 1000;
+        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("truetype");
+      }
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -182,89 +240,94 @@
         <div class="view-C61RwL">
           <div class="navbar-UOcbxe">
             <div class="hr-dIx87p"></div>
-            <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div>
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
+              target="_blank"
+            >
+              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
+            >
           </div>
-          <a href="mainpage.html"><div class="nalssam-UOcbxe applesdgothicneo-heavy-normal-white-14px">NALSSAM</div></a>
+          <a href="mainpage.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
-        <div class="bar-C61RwL">
-          <div class="footer-enIJlq">
-            <div class="group-ZXviDO">
-              <div class="vr-mmDlSt"></div>
-              <div class="vr-copy-mmDlSt"></div>
-              <div class="textlabel-mmDlSt hw-little-fonts naldev-style">동아리 실 위치</div>
-              <div class="x1-mmDlSt hw-little-fonts naldev-style">실험동 1층 유도실 옆</div>
-              <div class="x010-8402-2173-mmDlSt hw-little-fonts naldev-style">인사팀 문의 010 8402 2173</div>
-            </div>
-            <div class="vr-copy-ZXviDO"></div>
-            <div class="x010-29-ZXviDO hw-little-fonts naldev-style">날샘 문의사항 대표연락처(010 2997 9675)</div>
-            <div class="hr-ZXviDO"></div>
-            <div class="hr-Ij0EpA"></div>
-            <div class="nalssam-ZXviDO hw-little-fonts naldev-style">
-              NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
-            </div>
-            <div class="x-ZXviDO hw-little-fonts naldev-style">
-              날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘
-            </div>
-            <div class="nalssam-Ij0EpA hw-little-fonts naldev-style">공식 인스타 채널: @nalssam_sprout</div>
-          </div>
-        </div>
-        <div class="hw-C61RwL applesdgothicneo-normal-black-15px">HW 노예 지원</div>
-        <img class="x2-C61RwL" src="img/hw-ub77cuc778-2-uc544ub798-0E0D8294-F679-4068-8C17-2853C3651DA9.png" />
+        <div class="hw-C61RwL littleabout">HW 노예 지원</div>
+        <img class="x2-C61RwL" src="img/bm-ub77cuc778-2-uc544ub798-8DF41F25-AA87-4831-B23D-3E316715B340.png" />
         <div class="top-word-C61RwL">
-          <div class="deep-hard-RyCdLg">Deep하고 Hard한 노예 모집</div>
-          <div class="textlabel-RyCdLg applesdgothicneo-extra-normal-black-48px">
-            당신의 아이디어가 현실이 되기<br />더할 나위 없이 좋은 곳.
-          </div>
-          <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div>
+          <div class="deep-hard-RyCdLg sdsemi24">Deep하고 Hard한 노예 모집</div>
+          <div class="textlabel-RyCdLg thebig">당신의 아이디어가 현실이 되기<br />더할 나위 없이 좋은 곳.</div>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
+            target="_blank"
+          >
+            <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div></a
+          >
         </div>
-        <div class="kakao-talk20210218231558710-C61RwL"></div>
-        <div class="textlabel-C61RwL applesdgothicneo-normal-black-16px">
-          ㅏㄹㅁㄴㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ<br />ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ<br />ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
-        </div>
+        <div class="x300-C61RwL sizes">“다 있다, 300여만원 상당의 피지컬 컴퓨팅 부품”</div>
         <div class="x2-VMr6Om"></div>
+        <div class="textlabel-C61RwL thebigwhite">“대전대신고등학교 최고의 <br />하드웨어 장비와 시설”</div>
         <div class="group-2-C61RwL">
-          <div class="textlabel-zUixHA">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-sdxwGy" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-kTiyrb" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <img class="line-5-GE0XEQ" src="img/bm-line-5-1E561353-71E9-4ABB-99CC-514C7299C358.png" />
-          <div class="textlabel-sdxwGy applesdgothicneo-normal-black-36px">피지컬 컴퓨팅</div>
-          <div class="hw-zUixHA applesdgothicneo-normal-black-24px">
+          <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
+          <img class="line-5-zUixHA" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-sdxwGy" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-kTiyrb" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-GE0XEQ" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <div class="textlabel-sdxwGy sd36">피지컬 컴퓨팅</div>
+          <div class="hw-zUixHA sdmedium24">
             날샘 HW 팀에서는 아두이노와 라즈베리 파이를 이용한 수많은 프로젝트를 진행하며 다양한 센서와 <br />출력을
             이용한 작품과 시스템 제작한다. 300만원 상당의 아두이노 부품을 보유하여 이를 바탕으로 <br />창의적인
             아이디어를 현실화할 수 있다.
           </div>
-          <div class="textlabel-kTiyrb applesdgothicneo-normal-black-36px">피지컬 컴퓨팅과 인공지능</div>
-          <div class="hw-sdxwGy applesdgothicneo-normal-black-24px">
+          <div class="textlabel-kTiyrb sd36">피지컬 컴퓨팅과 인공지능</div>
+          <div class="hw-sdxwGy sdmedium24">
             단순한 인공지능이 아닌 HW에서의 인공지능 프로젝트. 현실의 문제를 해결하기 위한 인공지능 기술을 <br />배우고
             개발시키며 SW/HW의 융합적 역량을 키우며 개발한 프로젝트.<br /><br />ex) 라즈베리 파이와 카메라 센서를 이용한
             Computer Vision 인공지능.
           </div>
-          <div class="x3-d-zUixHA applesdgothicneo-normal-black-36px">3D 모델링</div>
-          <div class="fusion-360-3-d-zUixHA applesdgothicneo-normal-black-24px">
+          <div class="x3-d-zUixHA sd36">3D 모델링</div>
+          <div class="fusion-360-3-d-zUixHA sdmedium24">
             Fusion 360을 이용한 3D 모델링. 여러분의 아이디어와 날샘의 프로젝트를 3D 모델링하고 4대의 날샘<br />Ender-3D
-            프린터로 현실화하다. 늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야<br />함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함<br /><br />늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함늘려야함
+            프린터로 현실화하다.
           </div>
-          <div class="x2020-hard-ware-slav-zUixHA applesdgothicneo-normal-black-36px">
-            2020년도 HardWare Slave가 진행한 ProJ
-          </div>
-          <div class="x-zUixHA applesdgothicneo-normal-black-24px">
+          <div class="x2020-hard-ware-slav-zUixHA sd36">2020년도 HardWare Slave가 진행한 ProJ</div>
+          <div class="x-zUixHA sdmedium24">
             - 아두이노 로봇팔<br />
             - 무드 등 키트<br />
             - 스마트 화분<br />
             - 수경 재배기
           </div>
         </div>
-        <div class="group-15-C61RwL">
-          <div class="a-stair-bplant-box-wz60dm">
-            <span class="span1-YHxm9o"
-              >a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
-              기반 체온 측정 키트<br /></span
-            ><span class="span2-YHxm9o">.<br />.<br />.<br />그리고 당신의 아이디어</span>
+        <div class="x00000-C61RwL"></div>
+        <div class="stacked-group-C61RwL">
+          <div class="group-15-SHDHHB">
+            <div class="nalssam-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              NALSSAM의 프로젝트<br />
+            </div>
+            <div class="a-stair-bplant-box-kxhp4v sdidontknow">
+              a. STAIR<br />b.PLANT BOX<br />c.Real-Time-Speech-to-Sign<br />d.복합 환경 제어 시스템<br />e.스마트폰
+              기반 체온 측정 키트<br />.<br />.<br />.<br />그리고 당신의 아이디어
+            </div>
+            <div class="x2021-kxhp4v nalssamcr48 sd47blue sd48colorfull sdthenewenwcolor sd48newcolor sd48bold">
+              2021년도를<br />위한<br />프로젝트 계획
+            </div>
           </div>
-          <div class="nalssam-2021-wz60dm">
-            <span class="span1-w9XJTM">NALSSAM의 프로젝트</span
-            ><span class="span2-w9XJTM"><br />2021년도를<br />위한<br />프로젝트 계획</span>
+          <div class="bar-SHDHHB">
+            <div class="footer-fNGuiB">
+              <div class="group-i7hrr4">
+                <div class="vr-D44yGU"></div>
+                <div class="vr-copy-D44yGU"></div>
+                <div class="textlabel-D44yGU hw-little-fonts">동아리 실 위치</div>
+                <div class="x1-D44yGU hw-little-fonts">실험동 1층 유도실 옆</div>
+                <div class="x010-8402-2173-D44yGU hw-little-fonts">인사팀 문의 010 8402 2173</div>
+              </div>
+              <div class="vr-copy-i7hrr4"></div>
+              <div class="x010-29-i7hrr4 hw-little-fonts">날샘 문의사항 대표연락처(010 2997 9675)</div>
+              <div class="hr-i7hrr4"></div>
+              <div class="hr-PZ5l3E"></div>
+              <div class="nalssam-i7hrr4 hw-little-fonts">
+                NALSSAM 동아리의 관련 문의는 모두 카카오톡 채널 : nalssam 을 통해 받습니다.
+              </div>
+              <div class="x-i7hrr4 hw-little-fonts">날샘 페이스북 페이지: 대전대신고등학교 공학동아리 날샘</div>
+              <div class="nalssam-PZ5l3E hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
+            </div>
           </div>
         </div>
       </div>
